# ece574

./: .gitignore  474a_circuit1_lats.txt  474a_circuit4_lats.txt  README.md
assignment1/: DPCL_LAT.txt  NETLISTS_LAT.txt  README.txt  schematic_circuit1.sch  synthesis.tcl
assignment1/Source/: ADD.v  COMP.v  DEC.v  MOD.v  MUL.v  MUX2x1.v  REG.v  SADD.v  SCOMP.v  SMOD.v  SMUL.v  SMUX2x1.v  SSUB.v  SUB.v  circuit1.v  circuit1_out.v  circuit2.v  circuit2_out.v  circuit3.v  circuit3_out.v  circuit4.v  circuit4_out.v  circuit5.v  circuit5_out.v  circuit6.v  circuit6_out.v  mixedcircuit1_out.v  mixedcircuit2_out.v  mixedcircuit3_out.v  ucircuit1_out.v  ucircuit2_out.v  ucircuit3_out.v
assignment1/Synthesis/: synthesis.tcl  synthesis_ADD.tcl  synthesis_COMP.tcl  (+16 more)
assignment2/: CMakeLists.txt  README.txt  buildall.sh  dpgen.cpp  runall.sh
assignment2/akrall/: SADD.v  SCOMP.v  SDEC.v  SDIV.v  SHR.v  SINC.v  SMUL.v  SREG.v  SSHL.v  main.cpp
assignment2/bmkral_crstephenson_akrall3_dpgen/src/: component.h  latencycalculator.h
assignment2/crstephenson/: CMakeLists.txt
assignment2/crstephenson/src/: component.cpp  component.h  latency.h  main.cpp
assignment2/src/: component.cpp  component.h  dpgen.cpp  fileparser.cpp  fileparser.h  latency.h  latencycalculator.cpp  latencycalculator.h  main.cpp  variable.cpp  variable.h
assignment3/: CMakeLists.txt  runall.sh  runall_old.sh  sampleOutput.v
assignment3/src/: common.h  component.cpp  component.h  fileparser.cpp  fileparser.h  filewriter.cpp  filewriter.h  hlsyn.cpp  latencycalculator.cpp  latencycalculator.h  peeskedj.cpp  pschedule.cpp  pschedule.h  variable.cpp  variable.h
misc/: latencyParser.py
test/: helloWorld.cpp
(+166 files in other folders)
